@@ -1,6 +1,7 @@
 * v2.5.6.1
   * added 'ck_html_end_note' key to customize CK result dashboard
   * fixed Pareto frontier filter
+  * added "ck filter_2d math.frontier"
 
 * v2.5.6
   * added --j flag to "ck install package" to update CK_HOST_CPU_NUMBER_OF_PROCESSORS env 
